force-app/main/default/objects/SFDC_CRM_ADMIN__kav/SFDC_CRM_ADMIN__kav.object-meta.xml
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Specifically for SFDC Administrators documenting of processes behind the scenes</description>
    <label>SFDC CRM ADMIN</label>
    <pluralLabel>SFDC CRM ADMIN</pluralLabel>
</CustomObject>