force-app/main/default/objects/SFDC_CRM_ADMIN__kav/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>