force-app/main/default/objects/SFDC_CRM_ADMIN__kav/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
</CustomField>